force-app/main/default/objects/ETT_JCC_Rejection_Analysis__c/ETT_JCC_Rejection_Analysis__c.object-meta.xml
<CustomObject>
    <label>JCC Rejection Analysis</label>
    <nameField>
        <displayFormat>JCCR-{0000}</displayFormat>
        <label>JCC Rejection Analysis Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JCC Rejection Analysises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>