force-app/main/default/objects/ETT_JCC_Rejection_Analysis__c/fields/ETT_Body_Ply_Distortance__c.field-meta.xml
<CustomField>
    <fullName>ETT_Body_Ply_Distortance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Body Ply Distortance?</label>
    <type>Checkbox</type>
</CustomField>