force-app/main/default/objects/ETT_JCC_Rejection_Analysis__c/fields/ETT_Bread_Area_Damage__c.field-meta.xml
<CustomField>
    <fullName>ETT_Bread_Area_Damage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bread Area Damage?</label>
    <type>Checkbox</type>
</CustomField>