force-app/main/default/objects/ETT_JCC_Rejection_Analysis__c/fields/ETT_Cut_Spot_Buckling__c.field-meta.xml
<CustomField>
    <fullName>ETT_Cut_Spot_Buckling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cut Spot Buckling</label>
    <type>Checkbox</type>
</CustomField>