force-app/main/default/objects/ETT_JCC_Rejection_Analysis__c/fields/ETT_Cut_Spot_Seperation__c.field-meta.xml
<CustomField>
    <fullName>ETT_Cut_Spot_Seperation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cut Spot Seperation?</label>
    <type>Checkbox</type>
</CustomField>