force-app/main/default/objects/ETT_JCC_Rejection_Analysis__c/fields/ETT_Excessive_Cuts__c.field-meta.xml
<CustomField>
    <fullName>ETT_Excessive_Cuts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excessive Cuts?</label>
    <type>Checkbox</type>
</CustomField>