force-app/main/default/objects/ETT_JCC_Rejection_Analysis__c/fields/ETT_Excessive_Damage_on_Seat_Belt__c.field-meta.xml
<CustomField>
    <fullName>ETT_Excessive_Damage_on_Seat_Belt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excessive Damage on Seat Belt?</label>
    <type>Checkbox</type>
</CustomField>