force-app/main/default/objects/ETT_JCC_Rejection_Analysis__c/fields/ETT_Large_Cut__c.field-meta.xml
<CustomField>
    <fullName>ETT_Large_Cut__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Large Cut?</label>
    <type>Checkbox</type>
</CustomField>