force-app/main/default/objects/ETT_JCC_Rejection_Analysis__c/fields/ETT_Low_Base_Rubber__c.field-meta.xml
<CustomField>
    <fullName>ETT_Low_Base_Rubber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Low Base Rubber?</label>
    <type>Checkbox</type>
</CustomField>