force-app/main/default/objects/ETT_JCC_Rejection_Analysis__c/fields/ETT_Oil_Choked_Tyres__c.field-meta.xml
<CustomField>
    <fullName>ETT_Oil_Choked_Tyres__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oil Choked Tyres</label>
    <type>Checkbox</type>
</CustomField>