force-app/main/default/objects/ETT_JCC_Rejection_Analysis__c/fields/ETT_Old_and_Dry_Casing__c.field-meta.xml
<CustomField>
    <fullName>ETT_Old_and_Dry_Casing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Old and Dry Casing?</label>
    <type>Checkbox</type>
</CustomField>