force-app/main/default/objects/ETT_JCC_Rejection_Analysis__c/fields/ETT_Overall_Chipping__c.field-meta.xml
<CustomField>
    <fullName>ETT_Overall_Chipping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overall Chipping?</label>
    <type>Checkbox</type>
</CustomField>