force-app/main/default/objects/ETT_JCC_Rejection_Analysis__c/fields/ETT_Ply_Seperation__c.field-meta.xml
<CustomField>
    <fullName>ETT_Ply_Seperation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ply Seperation?</label>
    <type>Checkbox</type>
</CustomField>