force-app/main/default/objects/ETT_JCC_Rejection_Analysis__c/fields/ETT_Price_not_Agreed__c.field-meta.xml
<CustomField>
    <fullName>ETT_Price_not_Agreed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price not Agreed?</label>
    <type>Checkbox</type>
</CustomField>