force-app/main/default/objects/ETT_JCC_Rejection_Analysis__c/fields/ETT_Scrap__c.field-meta.xml
<CustomField>
    <fullName>ETT_Scrap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Scrap?</label>
    <type>Checkbox</type>
</CustomField>