force-app/main/default/objects/ETT_JCC_Rejection_Analysis__c/fields/ETT_Side_Wall_Buckling__c.field-meta.xml
<CustomField>
    <fullName>ETT_Side_Wall_Buckling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Side Wall Buckling</label>
    <type>Checkbox</type>
</CustomField>