force-app/main/default/objects/ETT_JCC_Rejection_Analysis__c/fields/ETT_Steel_Cord_Visible__c.field-meta.xml
<CustomField>
    <fullName>ETT_Steel_Cord_Visible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Steel Cord Visible?</label>
    <type>Checkbox</type>
</CustomField>