force-app/main/default/objects/ETT_JCC_Rejection_Analysis__c/fields/ETT_Total_Burst__c.field-meta.xml
<CustomField>
    <fullName>ETT_Total_Burst__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Total Burst?</label>
    <type>Checkbox</type>
</CustomField>